# debt_calculator

./: app.py  avalanche_vs_snowball.py  planning.py  pyproject.toml  requirements.txt
budgeter/: obligation.py  obligation_types.py  payment_plan.py
